# TFSWA-UNet

./: .gitignore  IMPLEMENTATION_CHECKLIST.md  LICENSE  PHASE1_IMPLEMENTATION_REPORT.md  PHASE1_SUMMARY.md  PHASE2_IMPLEMENTATION_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  PHASE4_IMPLEMENTATION_REPORT.md  PROJECT_SUMMARY.md  README.md  SDR_FIX_SUMMARY.md  VALIDATION_WITH_SDR.md  pyproject.toml  requirements.txt  test_loss_fix.py  test_model.py  test_phase2.py  test_phase3.py  test_sdr_eval.py  visualize_architecture.py
.github/: copilot-instructions.md
configs/data/: musdb.yaml
configs/model/: tfswa_unet.yaml
configs/training/: default.yaml
docs/: MEMORY_OPTIMIZATION.md  OOM_EMERGENCY_FIX.md  OPTIMIZATION_SUMMARY.md
scripts/: evaluate.py  train.py  train_low_vram.ps1  train_low_vram.sh
src/: __init__.py
src/data/: __init__.py  augmentation.py  musdb_dataset.py  stft_processor.py
src/evaluation/: __init__.py  evaluator.py  inference.py  metrics.py
src/models/: __init__.py  attention.py  blocks.py  tfswa_unet.py
src/optimization/: __init__.py  export.py  gradient_checkpoint.py  quantization.py
src/training/: __init__.py  losses.py  trainer.py
src/utils/: __init__.py  memory_monitor.py
tests/: test_phase4.py  test_placeholder.py
