[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfswa-unet"
version = "0.1.0"
description = "Temporal-Frequency and Shifted Window Attention U-Net for music source separation"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "librosa>=0.10",
    "soundfile",
    "numpy",
    "hydra-core",
    "omegaconf",
    "tqdm",
]

[project.optional-dependencies]
train = [
    "musdb",
    "museval",
    "tensorboard",
    "wandb",
]
